# MIA_01c_MLOps2

./: .gitignore  README.md  docker-compose.yaml  test_s3_google_cloud.py  train_and_track.py  xgb_model  xgb_model_local.json
.aws/: config
airflow/dags/: etl_process.py
airflow/dockerfiles/: requirements.txt
fastapi/dockerfiles/: fastapi_app.py  requirements.txt
graphql/: Dockerfile  graphql_app.py  requirements.txt
grpc/: Dockerfile  grpc_server.py  predict.proto  requirements.txt
minio/: create_buckets.sh  upload_file_to_bucket.sh
mlflow/dockerfiles/: requirements.txt
mlflow/experiments/: experiment.py  modelo_pipepline.ipynb
mlflow/store/artifact/: s3_artifact_repo.py
notebooks/: modelo_pipepline.ipynb  modelo_pipepline_v2.ipynb
streaming/: consumer.py  consumer_fast.py  consumer_grpc_original.py  oportunidades.xlsx  producer.py  producer_original.py  pyproject.toml
streamlit/: Dockerfile  requirements.txt  streamlit_app.py
streamlit/dockerfiles/: streamlit_app.py  streamlit_app_2.py
