[project]
name = "streaming"
version = "0.1.0"
description = ""
authors = [
    {name = "spsperi",email = "sofia.speri@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kafka-python (>=2.2.15,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
